feat: Add authentication settings and enhance AuthManager with registration and token refresh functionalities
- Introduced AuthSetting class for JWT configuration.
- Updated AuthManager to include user registration and token refresh methods.
- Enhanced AuthController with login, registration, and token refresh endpoints.
- Added security audit logging for user registration.
- Updated README with detailed project structure and usage instructions.
- Refactored code to use AegisAuthBase for shared entities and repositories across projects.
- Improved session management and middleware for session validation.

--- a/AegisAuthBase/AegisAuthBase.csproj
+++ b/AegisAuthBase/AegisAuthBase.csproj
@@ -1,15 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <PackageId>AegisAuthSession</PackageId>
-    <Version>1.0.0</Version>
+    <PackageId>AegisAuthBase</PackageId>
+    <Version>1.0.2</Version>
     <Authors>AegisConsole Team</Authors>
     <Company>AegisConsole</Company>
-    <Description>A comprehensive Session-based authentication library with security audit logging for ASP.NET Core applications.</Description>
-    <PackageTags>session;authentication;security;asp-net-core</PackageTags>
+    <Description>Core library for AegisAuth, providing entities, repositories, and services for authentication and security.</Description>
+    <PackageTags>authentication;security;core;entities;repositories</PackageTags>
     <RepositoryUrl>https://github.com/dengzhizhong/AegisAuth</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
@@ -20,18 +20,14 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="8.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\AegisAuthBase\AegisAuthBase.csproj" />
+    <None Include="README.md" Pack="true" PackagePath="" />
   </ItemGroup>
 
 </Project>
