--- a/AegisAuthJwtTest/appsettings.json
+++ b/AegisAuthJwtTest/appsettings.json
@@ -5,5 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AuthSetting": {
+    "JwtTokenKey": "your-super-secret-jwt-key-here-at-least-32-characters-long",
+    "JwtTokenIssuer": "AegisAuthJwtTest",
+    "JwtTokenAudience": "AegisAuthJwtTest",
+    "AccessTokenExpirationMinutes": 60,
+    "RefreshTokenExpirationDays": 7,
+    "SessionExpirationMinutes": 30,
+    "SessionRememberMeExpirationDays": 7,
+    "MaxSessionsPerUser": 5
+  }
 }
