--- a/AegisAuthJwt/AegisAuthJwt.csproj
+++ b/AegisAuthJwt/AegisAuthJwt.csproj
@@ -5,7 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <PackageId>AegisAuthJwt</PackageId>
-    <Version>1.0.0</Version>
+    <Version>1.0.6</Version>
     <Authors>AegisConsole Team</Authors>
     <Company>AegisConsole</Company>
     <Description>A comprehensive JWT authentication library with token blacklisting and security audit logging for ASP.NET Core applications.</Description>
@@ -32,7 +32,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\AegisAuth.Core\AegisAuth.Core.csproj" />
+    <None Include="README.md" Pack="true" PackagePath="" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AegisAuthBase\AegisAuthBase.csproj" />
   </ItemGroup>
 
 </Project>
