Add repositories and services for security audit logs, token blacklisting, user passkeys, and user management; implement in-memory credential and two-factor authentication stores; configure application settings and create a demo HTML interface for JWT WebAuthn authentication.

--- a/AegisAuthBase/AegisAuthBase.csproj
+++ b/AegisAuthBase/AegisAuthBase.csproj
@@ -16,11 +16,13 @@
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageProjectUrl>https://github.com/dengzhizhong/AegisAuth</PackageProjectUrl>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    <UserSecretsId>c7e8e455-b50b-4633-9969-6a2105992aaf</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Fido2" Version="4.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0" />
