--- a/AegisAuthJwtDemo/AegisAuthJwtDemo.csproj
+++ b/AegisAuthJwtDemo/AegisAuthJwtDemo.csproj
@@ -7,10 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="10.0.1" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AegisAuthJwt\AegisAuthJwt.csproj" />
     <ProjectReference Include="..\AegisAuthBase\AegisAuthBase.csproj" />
   </ItemGroup>
 
